--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -1,3 +1,11 @@
-a:hover{
-    cursor: pointer;
+a:hover {
+  cursor: pointer;
 }
+
+.bg-image-parallax {
+  background-image: url("../../../public/bgmaybe.svg");
+}
+
+/* .herohero {
+  background-image: url("../../../public/bgmaybe.svg");
+} */
